@@ -1,4 +1,4 @@
-/*	$NetBSD: libpfkey.h,v 1.11 2006/12/09 05:52:57 manu Exp $	*/
+/*	$NetBSD: libpfkey.h,v 1.12 2006/12/10 18:46:39 manu Exp $	*/
 
 /* Id: libpfkey.h,v 1.13 2005/12/04 20:26:43 manubsd Exp */
 
@@ -87,20 +87,20 @@ struct pfkey_send_sa_args {
 	u_int32_t	l_addtime;
 	u_int32_t	l_usetime;
 	u_int32_t	seq;
-#ifdef SADB_X_EXT_NAT_T_TYPE
 	u_int8_t	l_natt_type;
 	u_int16_t	l_natt_sport, l_natt_dport;
 	struct sockaddr *l_natt_oa;
-#endif
-#ifdef SADB_X_EXT_NAT_T_FRAG
 	u_int16_t	l_natt_frag;
-#endif
-#ifdef SADB_X_EXT_SEC_CTX
 	u_int8_t ctxdoi, ctxalg;	/* Security context DOI and algorithm */
 	caddr_t ctxstr;			/* Security context string */
 	u_int16_t ctxstrlen;		/* length of security context string */
-#endif	
 };
+
+/* The options built into libipsec */
+extern int libipsec_opt;
+#define LIBIPSEC_OPT_NATT		0x01
+#define LIBIPSEC_OPT_FRAG		0x02
+#define LIBIPSEC_OPT_SEC_CTX		0x04
 
 /* IPsec Library Routines */
 
@@ -121,8 +121,8 @@ u_int pfkey_set_softrate __P((u_int, u_int));
 u_int pfkey_get_softrate __P((u_int));
 int pfkey_send_getspi __P((int, u_int, u_int, struct sockaddr *,
 	struct sockaddr *, u_int32_t, u_int32_t, u_int32_t, u_int32_t));
-int pfkey_send_update __P((struct pfkey_send_sa_args *));
-int pfkey_send_add __P((struct pfkey_send_sa_args *)); 
+int pfkey_send_update2 __P((struct pfkey_send_sa_args *));
+int pfkey_send_add2 __P((struct pfkey_send_sa_args *)); 
 int pfkey_send_delete __P((int, u_int, u_int,
 	struct sockaddr *, struct sockaddr *, u_int32_t));
 int pfkey_send_delete_all __P((int, u_int, u_int,
@@ -164,6 +164,29 @@ struct sadb_msg *pfkey_recv __P((int));
 int pfkey_send __P((int, struct sadb_msg *, int));
 int pfkey_align __P((struct sadb_msg *, caddr_t *));
 int pfkey_check __P((caddr_t *));
+
+/* 
+ * Deprecated, available for backward compatibility with third party 
+ * libipsec users. Please use pfkey_send_update2 and pfkey_send_add2 instead
+ */
+int pfkey_send_update __P((int, u_int, u_int, struct sockaddr *,
+	struct sockaddr *, u_int32_t, u_int32_t, u_int,
+	caddr_t, u_int, u_int, u_int, u_int, u_int, u_int32_t, u_int64_t,
+	u_int64_t, u_int64_t, u_int32_t));
+int pfkey_send_update_nat __P((int, u_int, u_int, struct sockaddr *,
+	struct sockaddr *, u_int32_t, u_int32_t, u_int,
+	caddr_t, u_int, u_int, u_int, u_int, u_int, u_int32_t, u_int64_t,
+	u_int64_t, u_int64_t, u_int32_t,
+	u_int8_t, u_int16_t, u_int16_t, struct sockaddr *, u_int16_t));
+int pfkey_send_add __P((int, u_int, u_int, struct sockaddr *,
+	struct sockaddr *, u_int32_t, u_int32_t, u_int,
+	caddr_t, u_int, u_int, u_int, u_int, u_int, u_int32_t, u_int64_t,
+	u_int64_t, u_int64_t, u_int32_t));
+int pfkey_send_add_nat __P((int, u_int, u_int, struct sockaddr *,
+	struct sockaddr *, u_int32_t, u_int32_t, u_int,
+	caddr_t, u_int, u_int, u_int, u_int, u_int, u_int32_t, u_int64_t,
+	u_int64_t, u_int64_t, u_int32_t,
+	u_int8_t, u_int16_t, u_int16_t, struct sockaddr *, u_int16_t));
 
 #ifndef __SYSDEP_SA_LEN__
 #define __SYSDEP_SA_LEN__
